force-app/main/default/objects/Slot__c/Slot__c.object-meta.xml
<CustomObject>
    <description>FHIR Slot — a bookable time window on a Schedule. Sharing is Controlled by Parent (Schedule).</description>
    <label>Slot</label>
    <nameField>
        <displayFormat>SLOT-{00000000}</displayFormat>
        <label>Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>