force-app/main/default/objects/Slot__c/fields/Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>Block_Reason__c</fullName>
    <label>Block Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>