force-app/main/default/objects/Slot__c/fields/Generated_By_Unavailability__c.field-meta.xml
<CustomField>
    <fullName>Generated_By_Unavailability__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Identifies blocked placeholder slots created solely to display provider time off.</description>
    <label>Generated By Unavailability</label>
    <type>Checkbox</type>
</CustomField>