force-app/main/default/objects/Slot__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Slots</relationshipLabel>
    <relationshipName>Slots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>