force-app/main/default/objects/Slot__c/fields/Unavailability__c.field-meta.xml
<CustomField>
    <fullName>Unavailability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unavailability</label>
    <referenceTo>Schedule_Unavailability__c</referenceTo>
    <relationshipLabel>Slots</relationshipLabel>
    <relationshipName>Slots</relationshipName>
    <type>Lookup</type>
</CustomField>