force-app/main/default/objects/Slot__c/listViews/All_Slots.listView-meta.xml
<ListView>
    <fullName>All_Slots</fullName>
    <columns>NAME</columns>
    <columns>Schedule__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Status__c</columns>
    <columns>Appointment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Slots</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>