force-app/main/default/objects/Slot__c/listViews/Free_Slots.listView-meta.xml
<ListView>
    <fullName>Free_Slots</fullName>
    <columns>NAME</columns>
    <columns>Schedule__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Appointment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Free</value>
    </filters>
    <label>Free Slots</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>